# arabic-ai-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  interactive_demo.py  web_ui.py
scripts/: git-push.ps1
src/arabic_ai_toolkit/: __init__.py  __main__.py  cli.py
src/arabic_ai_toolkit/augmentation/: synonym_replacer.py
src/arabic_ai_toolkit/cleaner/: __init__.py  cleaner.py  profanity_filter.py
src/arabic_ai_toolkit/correction/: auto_correct.py
src/arabic_ai_toolkit/datasets/: __init__.py  datasets_manager.py
src/arabic_ai_toolkit/keywords/: __init__.py  keywords.py
src/arabic_ai_toolkit/language_detection/: dialect_detection.py  language_detection.py
src/arabic_ai_toolkit/ner/: entity_extractor.py
src/arabic_ai_toolkit/normalizer/: __init__.py  normalizer.py  number_normalizer.py
src/arabic_ai_toolkit/sentiment/: sentiment_analyzer.py
src/arabic_ai_toolkit/stemmer/: light_stemmer.py
src/arabic_ai_toolkit/stopwords/: __init__.py  stopwords.py
src/arabic_ai_toolkit/summarization/: extractive_summarizer.py
src/arabic_ai_toolkit/tokenizer/: __init__.py  tokenizer.py
tests/: test_augmentation.py  test_cleaner.py  test_correction.py  test_dialect.py  test_keywords.py  test_language_detection.py  test_ner.py  test_normalizer.py  test_number_normalizer.py  test_profanity_filter.py  test_sentiment.py  test_stemmer.py  test_stopwords.py  test_summarizer.py  test_tokenizer.py
